[feature | chore] Включён checkstyle, рефактор кода под него