@@ -13,35 +13,33 @@ public class SpecificationBuilder<T> {
 
     private List<Condition> conditions = new ArrayList<>();
 
-    public SpecificationBuilder with(Condition condition) {
-
-        if (condition != null)
+    public SpecificationBuilder<T> with(Condition condition) {
+        if (condition != null) {
             conditions.add(condition);
-
+        }
         return this;
     }
 
-    public SpecificationBuilder with(List<Condition> conditions) {
-
-        if (conditions != null)
+    public SpecificationBuilder<T> with(List<Condition> conditions) {
+        if (conditions != null) {
             this.conditions.addAll(conditions);
-
+        }
         return this;
     }
 
     public Specification<T> build() {
 
-        if (conditions.isEmpty())
+        if (conditions.isEmpty()) {
             return null;
+        }
 
         List<Specification<T>> specifications = new ArrayList<>();
 
         for (var condition : conditions) {
-
             specifications.add(new SpecificationImpl<>(condition));
         }
 
-        Specification<T> finalSpecification = specifications.get(0);
+        Specification<T> finalSpecification = specifications.getFirst();
         for (int i = 0; i < conditions.size() - 1; ++i) {
 
             if (!conditions.get(i).getLogicalOperator().equals(Condition.LogicalOperatorType.END)) {
