@@ -8,19 +8,17 @@ import org.springframework.data.jpa.domain.Specification;
 public class SpecificationImpl<T> implements Specification<T> {
 
     private final Condition condition;
+
     @Override
     public Predicate toPredicate(Root<T> root, CriteriaQuery<?> query, CriteriaBuilder criteriaBuilder) {
 
         switch (condition.getOperation()) {
 
-            case EQUALS: {
-
+            case EQUALS:
                 return criteriaBuilder.equal(root.get(condition.getFieldName()).as(condition.getValue().getClass()),
                         condition.getValue());
-            }
 
             case LESS:
-
                 return criteriaBuilder.lessThan(root.get(condition.getFieldName()).as(condition.getValue().getClass()),
                         condition.getValue());
 
@@ -28,21 +26,17 @@ public class SpecificationImpl<T> implements Specification<T> {
                 return criteriaBuilder.greaterThan(root.get(condition.getFieldName()).as(condition.getValue().getClass()),
                         condition.getValue());
 
-            case IN: {
-
+            case IN:
                 Predicate predicate = root.get(condition.getFieldName())
-                        .as(condition.getValues().get(0).getClass()).in(condition.getValues());
-
-                if (condition.getValues().contains(null))
+                        .as(condition.getValues().getFirst().getClass()).in(condition.getValues());
+                if (condition.getValues().contains(null)) {
                     return criteriaBuilder.or(predicate, root.get(condition.getFieldName()).isNull());
-
+                }
                 return predicate;
-            }
 
-            case BEGINS_WITH: {
-
+            case BEGINS_WITH:
                 return criteriaBuilder.like(root.get(condition.getFieldName()).as(String.class), condition.getValue().toString() + "%");
-            }
+
 
             default:
                 return null;
